--- a/client/index.jade
+++ b/client/index.jade
@@ -2,12 +2,18 @@ doctype html
 html
   head
     meta(charset='utf-8')      
-    title Towers of Hanoi
+    title Tower of Hanoi
     link(rel='stylesheet', href='/vendor/font-awesome/css/font-awesome.min.css')
     link(rel='stylesheet', href=isProd ? '/index.min.css' : '/index.css')
     link(rel='shortcut icon', href='/favicon.ico')
   body
-    h1 Towers of Hanoi
+    h1 Tower of Hanoi
+    input#amount(type='number', autofocus=true, value='5')
+    button#begin Begin
+    #stage
+      #t1.tower
+      #t2.tower
+      #t3.tower
 
     script(src='/vendor/jquery/dist/jquery.min.js')
     script(src='/vendor/lodash/lodash.min.js')
